main.css
body{
    margin-top: 0.5%;
    background:  rgb(240,255,255);
    background-color:linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(153,221,218,0.5) 100rem);

}


.topnav {
    display: flex;
    background-color: black;
    font-size: 1.25rem;
    height: 4.5rem;
    padding-bottom: 0%;
    margin-bottom: 0cm;
  }

.menu {
    
    justify-content: space-around;
    font-family: 'Franklin Gothic Medium',
        'Arial Narrow',
        Arial, sans-serif;
    overflow-y: hidden;
    
  }


.menu a{
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 20px 25px;
  text-decoration: none;
  font-size: 23px;
  
}

.menu a:hover {
    background-color: #ddd;
    color: black;
}

.menu a.active {
    background-color: #04AA6D;
    color: white;
    overflow: hidden;
  }

.topnav h1{
    text-decoration: none;
    color: #fff;
    margin: 1.2rem;
}

.container {
  display: flex;
  align-items: center; 
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 3px;
 }

 table{
  border: 1;
 }

 iframe {
  border: 1px solid black;
  width: 100%; 
  margin-bottom: 20%;
}

.responsive-google-slides {
  position: relative;
  height: 0;
  overflow: hidden;
  padding-top: 40%;
}
.responsive-google-slides iframe {
  border: 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 600px;
  max-height: 450px;
  height: 100%;
}
 
 

